Fix Java 21 deprecation-for-removal warnings; bump target to Java 11
- ReflectUtil: replace deprecated new Integer/Short/Byte/Long/Float/Double(String)
  constructors with valueOf() in both setObjectField and parseToObject
- HostSystem: replace new Boolean(bool)/new Integer(int) with valueOf()
- XmlGenDom: remove removed AccessControlException import; catch SecurityException
  (its superclass) instead — same semantics, not removed in Java 17+
- CacheInstance: replace Thread.stop() (throws UnsupportedOperationException in
  Java 21) with Thread.interrupt() — cleanUp() signals the thread first
- build.gradle: bump sourceCompatibility/targetCompatibility 1.8 → 11

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>